--- a/0x0D-nf_crypto/nf_crypto/package.json
+++ b/0x0D-nf_crypto/nf_crypto/package.json
@@ -18,6 +18,7 @@
     "react-chartjs": "^0.7.3",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "^2.1.3",
     "web-vitals": "^2.1.4"
   },
