--- a/0x0D-nf_crypto/nf_crypto/package.json
+++ b/0x0D-nf_crypto/nf_crypto/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.23.6",
     "axios": "^1.1.3",
+    "babel-preset-es2015": "^6.24.1",
     "chart.js": "^3.9.1",
     "html-react-parser": "^3.0.4",
     "millify": "^5.0.1",
@@ -19,7 +20,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.1",
     "redux": "^4.2.0",
     "web-vitals": "^2.1.4"
   },
@@ -46,5 +47,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.19.6",
+    "@babel/preset-env": "^7.19.4",
+    "webpack": "^5.74.0"
   }
 }
