--- a/0x0E-real_estate_app/nf_realty/package.json
+++ b/0x0E-real_estate_app/nf_realty/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/react": "^2.3.7",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@react-icons/all-files": "^4.1.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
