--- a/0x0E-real_estate_app/nf_realty/package.json
+++ b/0x0E-real_estate_app/nf_realty/package.json
@@ -28,5 +28,8 @@
     "react-horizontal-scrolling-menu": "^3.2.3",
     "react-icons": "^4.6.0",
     "typescript": "4.8.4"
+  },
+  "devDependencies": {
+    "@types/nprogress": "^0.2.0"
   }
 }
