--- a/0x12-personal_wesite/package.json
+++ b/0x12-personal_wesite/package.json
@@ -13,6 +13,7 @@
     "mdb-react-ui-kit": "^6.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.15.0",
     "reactstrap": "^9.2.0"
   },
   "devDependencies": {
