--- a/0x14-timeline/timeline/package.json
+++ b/0x14-timeline/timeline/package.json
@@ -13,6 +13,8 @@
     "next": "^14.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-overlay": "^6.0.11",
+    "react-scripts": "^5.0.1",
     "react-vertical-timeline-component": "^3.6.0"
   },
   "devDependencies": {
@@ -23,6 +25,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "process": "^0.11.10",
     "vite": "^4.4.5"
   }
 }
